<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:stv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/person_module_huise_bg"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/person_module_white">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:maxWidth="220dp"
                android:singleLine="true"
                android:text="个人中心"
                android:textColor="@color/person_module_black_3"
                android:textSize="@dimen/person_module_text_da" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/person_module_white"
            android:orientation="horizontal">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/img_head_view"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                fresco:placeholderImage="@mipmap/person_module_head_image"
                fresco:roundAsCircle="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.3"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="张三李四"
                        android:textColor="@color/person_module_black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_module_department"
                        android:textColor="@color/person_module_gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_department"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="信息化技术保障中心"
                        android:textColor="@color/person_module_gray"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!--        <View style="@style/horizontal_line_style" />-->

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.allen.library.SuperTextView
            android:id="@+id/stv_person"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            stv:sLeftIconRes="@mipmap/person_module_icon_person"
            stv:sLeftTextColor="@color/person_module_black"
            stv:sLeftTextSize="15sp"
            stv:sLeftTextString="@string/person_module_profile_data"
            stv:sRightIconRes="@drawable/person_module_ic_right_next" />


        <com.allen.library.SuperTextView
            android:id="@+id/stv_password_edit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            stv:sLeftIconRes="@mipmap/person_module_icon_repassword"
            stv:sLeftTextColor="@color/person_module_black"
            stv:sLeftTextSize="15sp"
            stv:sLeftTextString="@string/person_module_password_setting"
            stv:sRightIconRes="@drawable/person_module_ic_right_next" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.allen.library.SuperTextView
            android:id="@+id/stv_favorite"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            stv:sLeftIconRes="@mipmap/person_module_icon_favorite"
            stv:sLeftTextColor="@color/person_module_black"
            stv:sLeftTextSize="15sp"
            stv:sLeftTextString="@string/person_module_my_sign_in"
            stv:sRightIconRes="@drawable/person_module_ic_right_next" />


        <com.allen.library.SuperTextView
            android:id="@+id/stv_share"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            stv:sLeftIconRes="@mipmap/person_module_icon_share"
            stv:sLeftTextColor="@color/person_module_black"
            stv:sLeftTextSize="15sp"
            stv:sLeftTextString="@string/person_module_my_share"
            stv:sRightIconRes="@drawable/person_module_ic_right_next" />

        <com.allen.library.SuperTextView
            android:id="@+id/stv_scan"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            stv:sLeftIconRes="@mipmap/person_module_icon_scan"
            stv:sLeftTextColor="@color/person_module_black"
            stv:sLeftTextSize="15sp"
            stv:sLeftTextString="@string/person_module_scan"
            stv:sRightIconRes="@drawable/person_module_ic_right_next" />


        <com.allen.library.SuperTextView
            android:id="@+id/stv_setting"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            stv:sLeftIconRes="@mipmap/person_module_icon_setting"
            stv:sLeftTextColor="@color/person_module_black"
            stv:sLeftTextSize="15sp"
            stv:sLeftTextString="@string/person_module_setting"
            stv:sRightIconRes="@drawable/person_module_ic_right_next" />


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.allen.library.SuperTextView
            android:id="@+id/stv_feedback"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            stv:sLeftIconRes="@mipmap/person_module_icon_feedback"
            stv:sLeftTextColor="@color/person_module_black"
            stv:sLeftTextSize="15sp"
            stv:sLeftTextString="@string/person_module_feedback"
            stv:sRightIconRes="@drawable/person_module_ic_right_next" />


        <com.allen.library.SuperTextView
            android:id="@+id/stv_about"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            stv:sLeftIconRes="@mipmap/person_module_icon_about"
            stv:sLeftTextColor="@color/person_module_black"
            stv:sLeftTextSize="15sp"
            stv:sLeftTextString="@string/person_module_about"
            stv:sRightIconRes="@drawable/person_module_ic_right_next" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/person_module_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_logout"
                style="@style/style_button"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/person_module_selector_btn_negative"
                android:text="@string/person_module_login_out" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>